Update:行動裝置導引至KYC連結 ，整為可選擇平台。

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/RetirementPreparation.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/RetirementPreparation.cshtml
@@ -11,9 +11,6 @@
 
 @{
     var isLogin = FcbMemberHelper.CheckMemberLogin();
-    var WebKycLink = Settings.GetSetting("WebKYC");
-    var FirsteKycLink = Settings.GetSetting("FirsteKYC");
-    var IleoKycLink = Settings.GetSetting("IleoKYC");
 }
 
 <!-- 退休準備試算_描述區塊 -->
@@ -765,7 +762,7 @@
                                                 <div class="l-riskCard__content">
                                                     <div class="l-riskCard__desc">已自動帶入您的風險屬性，如果想要變更請自行前往變更！如您已變更完成，請重新更新頁面</div>
                                                     <div class="l-riskCard__actions">
-                                                        <a href="#" rel="noopener noreferrer" class="o-btn o-btn--secondary o-btn--thin o-btn--auto GOKYC">進行風險屬性評估</a>
+                                                        <a href="#popupGoKyc" rel="noopener noreferrer" class="o-btn o-btn--secondary o-btn--thin o-btn--auto" data-popup="true">進行風險屬性評估</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -951,7 +948,7 @@
                                                 <div class="l-riskCard__content">
                                                     <div class="l-riskCard__desc">已自動帶入您的風險屬性，如果想要變更請自行前往變更！如您已變更完成，請重新更新頁面</div>
                                                     <div class="l-riskCard__actions">
-                                                        <a href="#" rel="noopener noreferrer" class="o-btn o-btn--secondary o-btn--thin o-btn--auto GOKYC">進行風險屬性評估</a>
+                                                        <a href="#popupGoKyc" rel="noopener noreferrer" class="o-btn o-btn--secondary o-btn--thin o-btn--auto" data-popup="true">進行風險屬性評估</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -1137,7 +1134,7 @@
                                                 <div class="l-riskCard__content">
                                                     <div class="l-riskCard__desc">已自動帶入您的風險屬性，如果想要變更請自行前往變更！如您已變更完成，請重新更新頁面</div>
                                                     <div class="l-riskCard__actions">
-                                                        <a href="#" rel="noopener noreferrer" class="o-btn o-btn--secondary o-btn--thin o-btn--auto GOKYC">進行風險屬性評估</a>
+                                                        <a href="#popupGoKyc" rel="noopener noreferrer" class="o-btn o-btn--secondary o-btn--thin o-btn--auto" data-popup="true">進行風險屬性評估</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -1323,7 +1320,7 @@
                                                 <div class="l-riskCard__content">
                                                     <div class="l-riskCard__desc">已自動帶入您的風險屬性，如果想要變更請自行前往變更！如您已變更完成，請重新更新頁面</div>
                                                     <div class="l-riskCard__actions">
-                                                        <a href="#" rel="noopener noreferrer" class="o-btn o-btn--secondary o-btn--thin o-btn--auto GOKYC">進行風險屬性評估</a>
+                                                        <a href="#popupGoKyc" rel="noopener noreferrer" class="o-btn o-btn--secondary o-btn--thin o-btn--auto" data-popup="true">進行風險屬性評估</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -1557,7 +1554,7 @@
                     <div class="c-calcLocker__desc ">您尚未完成風險評估，可至網銀進行風險屬性評估</div>
                     <div class="c-calcLocker__actions">
                         <div class="c-calcLocker__btn">
-                            <button type="button" class="o-btn o-btn--primary o-btn--lg GOKYC1">風險屬性評估</button>
+                            <button type="button" class="o-btn o-btn--primary o-btn--lg GOKYC">風險屬性評估</button>
                         </div>
                     </div>
                 </div>
@@ -2384,48 +2381,33 @@
             //#endregion
 
             //#region 連結風險屬性驗測網站綁定事件
-            ///我的風險屬性
+            ///風險屬性遮罩
             $(document).on('click', '.GOKYC', function (event) {
                 event.preventDefault();
-                const webKycLink = getKycLink();
-
-                window.open(webKycLink, '_blank');
-            });
-            ///風險屬性遮罩
-            $(document).on('click', '.GOKYC1', function (event) {
-                event.preventDefault();
-                const webKycLink = getKycLink();
-
-                window.open(webKycLink, '_blank');
-
+                $.magnificPopup.close();
+                $.magnificPopup.instance.history.splice(0, $.magnificPopup.instance.history.length - 1);
                 setTimeout(function () {
                     $.magnificPopup.open({
                         items: {
                             src: '#popupRisk'
                         },
-                        type: 'inline'
+                        type: 'inline',
+                        callbacks: {
+                            open: function () {
+                                setTimeout(function () {
+                                    $.magnificPopup.open({
+                                        items: {
+                                            src: '#popupGoKyc'
+                                        },
+                                        type: 'inline'
+                                    });
+                                }, 100);
+                            }
+                        }
                     });
                     $.magnificPopup.instance.history.splice(0, $.magnificPopup.instance.history.length - 1);
                 }, 100);
             });
-            //#endregion
-
-            //#region 判斷使用裝置獲取KYC連結
-            function getKycLink() {
-                let webKycLink;
-                if ($(window).width() < 1199) {
-                    let MobilePlatform = store.get("MobilePlatform") || "firste";
-                    if (MobilePlatform == "firste") {
-                        webKycLink = "@FirsteKycLink";
-                    } else {
-                        webKycLink = "@IleoKycLink";
-                    }
-                    webKycLink = webKycLink.replaceAll('&amp;', '&');
-                } else {
-                    webKycLink = "@WebKycLink";
-                }
-                return webKycLink;
-            }
             //#endregion
 
             //#region 各欄位檢核方法
@@ -3778,7 +3760,7 @@
                                                 </div>
                                                 <div class="c-calcLocker__desc t2 t-bold">進行風險屬性評估後即可獲得專屬推薦</div>
                                                 <div class="c-calcLocker__actions">
-                                                                    <div class="c-calcLocker__btn"><a href="#popupRisk" class="o-btn o-btn--primary o-btn--lg GOKYC1" data-popup="true">風險屬性評估</a></div>
+                                                                    <div class="c-calcLocker__btn"><a href="#" class="o-btn o-btn--primary o-btn--lg GOKYC" data-popup="true">風險屬性評估</a></div>
                                                 </div>
                                             </div>
                                         </div>
