--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/Saving.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/Saving.cshtml
@@ -1499,6 +1499,9 @@
             var hasRenderedRecommendations = false;
             var lockImg = "/themes/images/icons/others/lock.svg"
             var defaultRiskAttributes = '@Model.DefaultRiskAttributes';
+            var Conservative = '@Model.Conservative';
+            var Stable = '@Model.Stable';
+            var Positive = '@Model.Positive';
             var fundIds = @(new HtmlString(JsonHelper.SerializeObject(Model.FundID)));
             var Target, Years, Prepared, Monthly, ExpectedRoi;
             var SavingTarget, SavingYears, SavingPrepared, SavingMonthly, SavingExpectedRoi;
@@ -1574,13 +1577,13 @@
             } else if (SC_DATA.Risk == '3') {
                 assetsData = positiveAssetsData;
             } else {
-                if (defaultRiskAttributes == '2') {
+                if (defaultRiskAttributes == Conservative) {
                     assetsData = conservativeAssetsData;
                     UpdateRiskAttributesContent('1');
-                } else if (defaultRiskAttributes == '5') {
+                } else if (defaultRiskAttributes == Stable) {
                     assetsData = robustAssetsData;
                     UpdateRiskAttributesContent('2');
-                } else if (defaultRiskAttributes == '7') {
+                } else if (defaultRiskAttributes == Positive) {
                     assetsData = positiveAssetsData;
                     UpdateRiskAttributesContent('3');
                 }
@@ -1873,11 +1876,11 @@
                         $(".tab5Btn").removeClass("u-hidden");
 
                         if (SC_DATA.Risk == '1') {
-                            defaultRiskAttributes = 2;
+                            defaultRiskAttributes = Conservative;
                         } else if (SC_DATA.Risk == '2') {
-                            defaultRiskAttributes = 5;
+                            defaultRiskAttributes = Stable;
                         } else if (SC_DATA.Risk == '3') {
-                            defaultRiskAttributes = 7;
+                            defaultRiskAttributes = Positive;
                         }
 
                         tab1Results = planningResults;
@@ -3533,17 +3536,17 @@
 
                 switch (risk) {
                     case "1":
-                        defaultRiskAttributes = 2;
+                        defaultRiskAttributes = Conservative;
                         imgSrc = '@Model.ConservativeRiskImage';
                         assetsData = conservativeAssetsData;
                         break;
                     case "2":
-                        defaultRiskAttributes = 5;
+                        defaultRiskAttributes = Stable;
                         imgSrc = '@Model.RobustRiskImage';
                         assetsData = robustAssetsData;
                         break;
                     case "3":
-                        defaultRiskAttributes = 7;
+                        defaultRiskAttributes = Positive;
                         imgSrc = '@Model.PositiveRiskImage';
                         assetsData = positiveAssetsData;
                         break;
