--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/BuyHouse.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/BuyHouse.cshtml
@@ -1519,9 +1519,9 @@
             var hasRenderedRecommendations = false;
             var lockImg = "/themes/images/icons/others/lock.svg"
             var defaultRiskAttributes = '@Model.DefaultRiskAttributes';
-            var Conservative = '@Model.Conservative';
-            var Stable = '@Model.Stable';
-            var Positive = '@Model.Positive';
+            var conservative = '@Model.Conservative';
+            var stable = '@Model.Stable';
+            var positive = '@Model.Positive';
             var fundIds = @(new HtmlString(JsonHelper.SerializeObject(Model.FundID)));
             var downPayment, years, amountPrepared, monthlyInvestment, expectedRoi;
             var BuyHousedownPayment, BuyHouseyears, BuyHouseamountPrepared, BuyHousemonthlyInvestment, BuyHouseexpectedRoi;
@@ -1597,13 +1597,13 @@
             } else if (SC_DATA.Risk == '3') {
                 assetsData = positiveAssetsData;
             } else {
-                if (defaultRiskAttributes == Conservative) {
+                if (defaultRiskAttributes == conservative) {
                     assetsData = conservativeAssetsData;
                     UpdateRiskAttributesContent('1');
-                } else if (defaultRiskAttributes == Stable) {
+                } else if (defaultRiskAttributes == stable) {
                     assetsData = robustAssetsData;
                     UpdateRiskAttributesContent('2');
-                } else if (defaultRiskAttributes == Positive) {
+                } else if (defaultRiskAttributes == positive) {
                     assetsData = positiveAssetsData;
                     UpdateRiskAttributesContent('3');
                 }
@@ -1897,11 +1897,11 @@
                         $(".tab5Btn").removeClass("u-hidden");
 
                         if (SC_DATA.Risk == '1') {
-                            defaultRiskAttributes = Conservative;
+                            defaultRiskAttributes = conservative;
                         } else if (SC_DATA.Risk == '2') {
-                            defaultRiskAttributes = Stable;
+                            defaultRiskAttributes = stable;
                         } else if (SC_DATA.Risk == '3') {
-                            defaultRiskAttributes = Positive;
+                            defaultRiskAttributes = positive;
                         }
 
                         tab1Results = planningResults;
@@ -3552,17 +3552,17 @@
 
                 switch (risk) {
                     case "1":
-                        defaultRiskAttributes = Conservative;
+                        defaultRiskAttributes = conservative;
                         imgSrc = '@Model.ConservativeRiskImage';
                         assetsData = conservativeAssetsData;
                         break;
                     case "2":
-                        defaultRiskAttributes = Stable;
+                        defaultRiskAttributes = stable;
                         imgSrc = '@Model.RobustRiskImage';
                         assetsData = robustAssetsData;
                         break;
                     case "3":
-                        defaultRiskAttributes = Positive;
+                        defaultRiskAttributes = positive;
                         imgSrc = '@Model.PositiveRiskImage';
                         assetsData = positiveAssetsData;
                         break;
