--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/RetirementPreparation.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/RetirementPreparation.cshtml
@@ -1572,9 +1572,9 @@
             var hasRenderedRecommendations = false;
             var lockImg = "/themes/images/icons/others/lock.svg"
             var defaultRiskAttributes = '@Model.DefaultRiskAttributes';
-            var Conservative = '@Model.Conservative';
-            var Stable = '@Model.Stable';
-            var Positive = '@Model.Positive';
+            var conservative = '@Model.Conservative';
+            var stable = '@Model.Stable';
+            var positive = '@Model.Positive';
             var fundIds = @(new HtmlString(JsonHelper.SerializeObject(Model.FundID)));
             var yearBegin, yearEnd, lifeExpectancy, currentMonthlyCost, retireMonthlyCost, amountPrepared, pension, monthlyInvestment, expectedRoi, payExpensesYears;
             var RetyearBegin, RetyearEnd, RetlifeExpectancy, RetcurrentMonthlyCost, RetretireMonthlyCost, RetamountPrepared, Retpension, RetmonthlyInvestment, RetexpectedRoi, RetpayExpensesYears;
@@ -1655,13 +1655,13 @@
             } else if (SC_DATA.Risk == '3') {
                 assetsData = positiveAssetsData;
             } else {
-                if (defaultRiskAttributes == Conservative) {
+                if (defaultRiskAttributes == conservative) {
                     assetsData = conservativeAssetsData;
                     UpdateRiskAttributesContent('1');
-                } else if (defaultRiskAttributes == Stable) {
+                } else if (defaultRiskAttributes == stable) {
                     assetsData = robustAssetsData;
                     UpdateRiskAttributesContent('2');
-                } else if (defaultRiskAttributes == Positive) {
+                } else if (defaultRiskAttributes == positive) {
                     assetsData = positiveAssetsData;
                     UpdateRiskAttributesContent('3');
                 }
@@ -2017,11 +2017,11 @@
                         $(".tab4Btn").removeClass("u-hidden");
 
                         if (SC_DATA.Risk == '1') {
-                            defaultRiskAttributes = Conservative;
+                            defaultRiskAttributes = conservative;
                         } else if (SC_DATA.Risk == '2') {
-                            defaultRiskAttributes = Stable;
+                            defaultRiskAttributes = stable;
                         } else if (SC_DATA.Risk == '3') {
-                            defaultRiskAttributes = Positive;
+                            defaultRiskAttributes = positive;
                         }
 
                         tab1Results = totalA;
@@ -3779,17 +3779,17 @@
 
                 switch (risk) {
                     case "1":
-                        defaultRiskAttributes = Conservative;
+                        defaultRiskAttributes = conservative;
                         imgSrc = '@Model.ConservativeRiskImage';
                         assetsData = conservativeAssetsData;
                         break;
                     case "2":
-                        defaultRiskAttributes = Stable;
+                        defaultRiskAttributes = stable;
                         imgSrc = '@Model.RobustRiskImage';
                         assetsData = robustAssetsData;
                         break;
                     case "3":
-                        defaultRiskAttributes = Positive;
+                        defaultRiskAttributes = positive;
                         imgSrc = '@Model.PositiveRiskImage';
                         assetsData = positiveAssetsData;
                         break;
