update: 視訊功能維護中把會員相關隱藏

--- a/src/Feature/Account/platform/Views/Feature/Wealth/Account/MemberCard/MemberCard.cshtml
+++ b/src/Feature/Account/platform/Views/Feature/Wealth/Account/MemberCard/MemberCard.cshtml
@@ -3,6 +3,7 @@
 @using Feature.Wealth.Account.Models.MemberCard;
 @using Sitecore.Configuration;
 @using Xcms.Sitecore.Foundation.Basic.Extensions;
+@using Feature.Wealth.Account.Models.Consult;
 @model MemberCardViewModel
 @{
     var model = Model.MemberCardModel;
@@ -92,7 +93,7 @@
                                         }
                                     </div>
                                 </div>
-                                if (FcbMemberHelper.BranchCanUseConsult() && !member.IsEmployee && !member.IsManager )
+                                if (!ConsultRelatedLinkSetting.GetIsMaintain() && FcbMemberHelper.BranchCanUseConsult() && !member.IsEmployee && !member.IsManager )
                                 {
                                 <div class="c-member__info">
                                     <div class="c-member__title">
