--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Navigation/PrimaryNavigation.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Navigation/PrimaryNavigation.cshtml
@@ -6,7 +6,7 @@
 @inherits Xcms.Sitecore.Foundation.Basic.MVC.EditorCompatibleView<Xcms.Sitecore.Feature.Navigation.Models.NavigationMenu>
 @using Feature.Wealth.Account.Helpers
 @using Foundation.Wealth.Helper
-
+@using Feature.Wealth.Component.Models.Consult
 @if (Model == null)
 {
     return;
@@ -128,7 +128,7 @@
                 var member = FcbMemberHelper.GetMemberAllInfo();
                 <div class="c-menu__login">
                     <div class="l-flex u-flex-col u-flex-gap-sm">
-                        @if (FcbMemberHelper.BranchCanUseConsult() && !string.IsNullOrEmpty(member.WebBankId) && !string.IsNullOrEmpty(member.Advisror) && !member.IsManager)
+                        @if (!ConsultRelatedLinkSetting.GetIsMaintain() && FcbMemberHelper.BranchCanUseConsult() && !string.IsNullOrEmpty(member.WebBankId) && !string.IsNullOrEmpty(member.Advisror) && !member.IsManager)
                         {
                             <div class="l-flex__item">
                                 <a href="@MemberRelatedLinkHelper.GetReserveConsultingUrl()" class="o-btn o-btn--primary o-btn--lg">預約諮詢</a>
