update: 調整embed全站隱藏麵包屑&&分享，基金詳細頁隱藏下拉

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
@@ -34,7 +34,7 @@
         <div class="l-mainstage__toolbar">
             <div class="l-flex">
                 <div class="l-flex__item">
-                    <div class="l-selectbox">
+                    <div class="l-selectbox u-hidden-embed">
                         <div class="l-selectbox__item" id="fundSelect">
                             <select class="o-selectbox o-selectbox--funds" data-selection-css-class="select2-selection--funds" data-selectbox="true" data-width="auto" data-dropdown-auto-width="true" data-dropdown-css-class="select2-dropdown--autoWidth">
                                 <option>切換基金級別</option>
