--- a/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/Default.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/Default.cshtml
@@ -10,7 +10,7 @@
 }
 
 <!-- .l-navbar--gn: 綠色底色 (預設為無底色) -->
-<div class="l-navbar @(ItemUtils.IsChecked(RenderingContext.CurrentOrNull?.ContextItem, Templates.Navigable.Fields.Background) ? "l-navbar--gn" : "")">
+<div class="l-navbar u-hidden-embed @(ItemUtils.IsChecked(RenderingContext.CurrentOrNull?.ContextItem, Templates.Navigable.Fields.Background) ? "l-navbar--gn" : "")">
     <div class="l-navbar__wrap">
         @Html.Sitecore().Placeholder("breadcrumb")
     </div>
