--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Bond/Bond.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Bond/Bond.cshtml
@@ -698,6 +698,7 @@
                         }
                     },
                     afterFilter: function (result) {
+                        this.paginator.setCurrentPage(1);
                         let isEmpty = result.length == 0;
                         $(`[data-filter-empty=${isEmpty}]`).show();
                         $(`[data-filter-empty=${!isEmpty}]`).hide();
