--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ConsultList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ConsultList.cshtml
@@ -600,6 +600,7 @@
             template: '#template0',
             callbacks: {
                 afterFilter: function (result) {
+                    this.paginator.setCurrentPage(1);
                     window.loading('hide');
                 },
                 afterPagination: function () {
@@ -680,6 +681,7 @@
             template: '#template1',
             callbacks: {
                 afterFilter: function (result) {
+                    this.paginator.setCurrentPage(1);
                     window.loading('hide');
                 },
                 afterPagination: function () {
@@ -760,6 +762,7 @@
             template: '#template2',
             callbacks: {
                 afterFilter: function (result) {
+                    this.paginator.setCurrentPage(1);
                     window.loading('hide');
                 },
                 afterPagination: function () {
@@ -837,6 +840,36 @@
             }, 300);
         });
         OrderColumn("consultationListTable2", 'ScheduleDate', 'is-desc', true);
+
+        function fnScrollUp() {
+            loading();
+            $('#consultationListTable0, #consultationListTable1, #consultationListTable2').scrollPosition('scroll');
+        }
+
+        function fnToFirstPage() {
+            loading();
+            $('#consultationListTable0, #consultationListTable1, #consultationListTable2').scrollPosition('scroll');
+            fjs0.paginator.setCurrentPage(1);
+            fjs1.paginator.setCurrentPage(1);
+            fjs2.paginator.setCurrentPage(1);
+        }
+
+        function attachPaginationEvents(paginatorSelector, handler) {
+            $(paginatorSelector).on('click', '[data-page]', handler);
+            $(paginatorSelector).on('keypress', '[data-page-input]', function (e) {
+                if (e.which === 13) {
+                    handler();
+                }
+            });
+        }
+        
+        attachPaginationEvents('#uid-pagination-0', fnScrollUp);
+        attachPaginationEvents('#uid-pagination-1', fnScrollUp);
+        attachPaginationEvents('#uid-pagination-2', fnScrollUp);
+
+        $(document).on('change.pagesize', '#uid-view-perPage', function () {
+            fnToFirstPage();
+         }).sizebox();
 
         function setPopup(id) {
             var consultSchedule = consultSchedules.find((item) => item.ScheduleID == id);
